Changed font increase button sizes to stop wrapping.

--- a/css/custom.css
+++ b/css/custom.css
@@ -34,7 +34,7 @@ h1 {
   text-align: right;
 }
 .right-buttons .btn {
-  font-size: 2em;
+  font-size: 1.8em;
 }
 .mobile-button {
   width: 100%;
